--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <title>موقعي الرائع</title>
+    <title>العاب مشمش-Meshmesh Gammes</title>
 </head>
 <body>
     <h1>مرحبًا بكم في موقعي!</h1>
