--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>العاب مشمش-Meshmesh Gammes</title>
-</head>
+</head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7717784490467847"
+     crossorigin="anonymous"></script>
 <body>
     <h1>مرحبًا بكم في موقعي!</h1>
 </body>
