--- a/index.html
+++ b/index.html
@@ -424,7 +424,48 @@
             image: "https://upload.wikimedia.org/wikipedia/en/e/e7/Sniper_Ghost_Warrior_3_cover_art.jpg",
             downloadLink: "https://www.sniperghostwarrior.com/",
             description: "لعبة تصويب تركز على القنص والمهام التكتيكية."
-        }
+        }<div class="game">
+    <h2>Teenage Mutant Ninja Turtles: Shredder's Revenge</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/6/6e/TMNT_Shredders_Revenge_Cover.jpg" alt="Teenage Mutant Ninja Turtles">
+    <a href="https://download-link.com/tmnt" target="_blank">تحميل اللعبة</a>
+</div>
+
+<div class="game">
+    <h2>PUBG Mobile Lite</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/72/PUBG_Mobile_Lite.jpg" alt="PUBG Mobile Lite">
+    <a href="https://download-link.com/pubglite" target="_blank">تحميل اللعبة</a>
+</div>
+
+<div class="game">
+    <h2>Car Parking Multiplayer</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/d/db/Car_Parking_Multiplayer.jpg" alt="Car Parking Multiplayer">
+    <a href="https://download-link.com/carparking" target="_blank">تحميل اللعبة</a>
+</div>
+
+<div class="game">
+    <h2>Car Simulator 2</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/a/a3/Car_Simulator_2.jpg" alt="Car Simulator 2">
+    <a href="https://download-link.com/carsimulator2" target="_blank">تحميل اللعبة</a>
+</div>
+
+<div class="game">
+    <h2>Internet Cafe Simulator</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/9/97/Internet_Cafe_Simulator.jpg" alt="Internet Cafe Simulator">
+    <a href="https://download-link.com/internetcafe" target="_blank">تحميل اللعبة</a>
+</div>
+
+<div class="game">
+    <h2>Supermarket Simulator</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/8/89/Supermarket_Simulator.jpg" alt="Supermarket Simulator">
+    <a href="https://download-link.com/supermarket" target="_blank">تحميل اللعبة</a>
+</div>
+
+<div class="game">
+    <h2>Egyptian Life</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/3/3c/Egyptian_Life.jpg" alt="Egyptian Life">
+    <a href="https://download-link.com/egyptianlife" target="_blank">تحميل اللعبة</a>
+</div>
+
     ];
 
     const gamesContainer = document.getElementById("games-container");
